--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/core": "7.12.3",
+    "@babel/eslint-parser": "^7.15.8",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
     "@svgr/webpack": "5.5.0",
     "@testing-library/jest-dom": "^5.11.4",
@@ -12,7 +13,7 @@
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
-    "@typescript-eslint/parser": "^4.5.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.0",
     "babel-loader": "8.1.0",
@@ -155,6 +156,7 @@
     "@types/styled-components": "^5.1.15",
     "less": "^4.1.2",
     "less-loader": "5.0.0",
+    "postcss-pxtorem": "5.1.1",
     "prettier": "^2.4.1",
     "typescript": "^4.4.3"
   }
