feat: svg draw force graph

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "css-loader": "4.3.0",
     "d3-force": "^3.0.0",
+    "d3-selection": "^3.0.0",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "eslint": "^7.11.0",
@@ -46,7 +47,7 @@
     "jest-circus": "26.6.0",
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.1",
-    "malyan-ink": "^0.0.14",
+    "lodash": "^4.17.21",
     "mini-css-extract-plugin": "0.11.3",
     "optimize-css-assets-webpack-plugin": "5.0.4",
     "pnp-webpack-plugin": "1.6.4",
@@ -158,6 +159,8 @@
   },
   "devDependencies": {
     "@types/d3-force": "^3.0.3",
+    "@types/d3-selection": "^3.0.1",
+    "@types/lodash": "^4.14.175",
     "@types/styled-components": "^5.1.15",
     "less": "^4.1.2",
     "less-loader": "5.0.0",
