--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "css-loader": "4.3.0",
     "d3-force": "^3.0.0",
+    "d3-scale": "^4.0.2",
     "d3-selection": "^3.0.0",
+    "d3-shape": "^3.0.1",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "eslint": "^7.11.0",
@@ -159,10 +161,12 @@
   },
   "devDependencies": {
     "@types/d3-force": "^3.0.3",
+    "@types/d3-scale": "^4.0.2",
     "@types/d3-selection": "^3.0.1",
+    "@types/d3-shape": "^3.0.2",
     "@types/lodash": "^4.14.175",
     "@types/styled-components": "^5.1.15",
-    "less": "^4.1.2",
+    "less": "4.1.2",
     "less-loader": "5.0.0",
     "postcss-pxtorem": "5.1.1",
     "prettier": "^2.4.1",
