--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "camelcase": "^6.1.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "css-loader": "4.3.0",
+    "d3-ease": "^3.0.1",
     "d3-force": "^3.0.0",
     "d3-scale": "^4.0.2",
     "d3-selection": "^3.0.0",
     "d3-shape": "^3.0.1",
+    "d3-transition": "^3.0.1",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "eslint": "^7.11.0",
@@ -160,10 +162,12 @@
     ]
   },
   "devDependencies": {
+    "@types/d3-ease": "^3.0.0",
     "@types/d3-force": "^3.0.3",
     "@types/d3-scale": "^4.0.2",
     "@types/d3-selection": "^3.0.1",
     "@types/d3-shape": "^3.0.2",
+    "@types/d3-transition": "^3.0.1",
     "@types/lodash": "^4.14.175",
     "@types/styled-components": "^5.1.15",
     "less": "4.1.2",
