--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@babel/core": "7.12.3",
     "@babel/eslint-parser": "^7.15.8",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
@@ -15,6 +16,7 @@
     "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "antd": "^4.16.13",
     "axios": "^0.22.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.0",
