--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/axios": "^0.14.0",
+    "@types/d3": "^7.1.0",
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
@@ -176,7 +177,8 @@
     "@types/d3-zoom": "^3.0.1",
     "@types/lodash": "^4.14.175",
     "@types/styled-components": "^5.1.15",
-    "less": "4.1.2",
+    "d3": "^7.1.1",
+    "less": "^4.1.2",
     "less-loader": "5.0.0",
     "postcss-pxtorem": "5.1.1",
     "prettier": "^2.4.1",
