--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "camelcase": "^6.1.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "css-loader": "4.3.0",
+    "d3-brush": "^3.0.0",
     "d3-drag": "^3.0.0",
     "d3-ease": "^3.0.1",
     "d3-force": "^3.0.0",
@@ -165,6 +166,7 @@
     ]
   },
   "devDependencies": {
+    "@types/d3-brush": "^3.0.1",
     "@types/d3-drag": "^3.0.1",
     "@types/d3-ease": "^3.0.0",
     "@types/d3-force": "^3.0.3",
